Made /public not a thing anymore

--- a/.htaccess
+++ b/.htaccess
@@ -14,3 +14,9 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+<Files ~ "^.*\.([Ee][Nn][Vv])">
+order allow,deny
+deny from all
+satisfy all
+</Files>
