--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "codecourse/notify": "^1.1",
-        "barryvdh/laravel-debugbar": "^2.0"
+        "codecourse/notify": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
